# data-transforms-library.archetype

./: .gitignore  README.md  archetype.rhai
contents/base/{{ project-name }}/: pyproject.toml
contents/base/{{ project-name }}/.github/workflows/: build_docker_container.yml
contents/package/{{ project-name }}/src/{{ project_name }}/ybor/driver/: driver.py  merics_main.py
contents/package/{{ project-name }}/src/{{ project_name }}/ybor/engine/: spark_engine.py
contents/package/{{ project-name }}/src/{{ project_name }}/ybor/examples/: orders.py
contents/package/{{ project-name }}/src/{{ project_name }}/ybor/helpers/: Conversions.py
contents/package/{{ project-name }}/src/{{ project_name }}/ybor/utils/: config_util.py  data_transformer.py  transformation_util.py
